--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -38,6 +38,7 @@ a
 	padding-top: 30vh;
 	background-color: $color-main;
 	text-align: center;
+	z-index: 999;
 
 	img
 	{
